# build123d-100-cad-exercises

./: README.md  pyproject.toml
src/3d_exercises/: 1.py  2.py  26.py  5.py  6.py  8.py  9.py
